Updates for juno release