@@ -16,7 +16,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<properties>
-		<tycho-version>0.12.0</tycho-version>
+		<tycho-version>0.15.0</tycho-version>
 	</properties>
 	<modules>
 		<module>org.eclipse.m2e.maveneclipse</module>
@@ -53,7 +53,7 @@
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
-						<argLine>${tycho.test.jvmArgs}</argLine>
+						<argLine>${ui.test.vmargs}</argLine>
 						<!-- Kill test JVM it tests take more than 10 minutes (600 seconds) 
 							to finish -->
 						<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
@@ -67,16 +67,42 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+    <profiles>
+        <profile>
+            <id>macosx</id>
+            <activation>
+                <os>
+                    <name>mac os x</name>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
+            </properties>
+        </profile>
+        <profile>
+            <id>other-os</id>
+            <activation>
+                <os>
+                    <name>not-mac</name>
+                    <family>!mac</family>
+                </os>
+            </activation>
+            <properties>
+                <ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+            </properties>
+        </profile>
+    </profiles>    
 	<repositories>
 		<repository>
 			<id>indigo</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/indigo</url>
+			<url>http://download.eclipse.org/releases/juno</url>
 		</repository>
 		<repository>
 			<id>m2e</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/technology/m2e/releases/1.0</url>
+			<url>http://download.eclipse.org/technology/m2e/releases/1.1</url>
 		</repository>
 	</repositories>
 </project>
